# ev3devcmd

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
ev3devcmd/: __init__.py  sftpclone.py
src/ev3devcmd/: __main__.py  sftpclone.py
