[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
readme = "README.md"
name = "ev3devcmd"
dynamic = ["version"]
authors = [{name = "Harco Kuppens", email = "h.kuppens@cs.ru.nl"}]
license = {file = "LICENSE.txt"}
description = "ev3devcmd library and cmdline utility"
keywords = [
    "IDE",
    "education",
    "programming",
    "EV3",
    "mindstorms",
    "lego",
]
classifiers = [
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Software Development",
]
requires-python = ">=3.6"
# TEMPORARY HACK:
# We use a mirror of sftpclone v1.2.2, because it has explicit dependency 'paramiko==2.4.1',
# but we need 'paramiko==2.6.0' for ev3devcmd!
# When we used sftpclone v1.2.2 as dependency, then the entry script would thrown an version conflict error
# because ev3devcmd needs 'paramiko==2.6.0' and sftpclone needs 'paramiko==2.4.1'.
# But sftpclone v1.2.2 works fine with the newer 'paramiko==2.6.0', so we took the HACK to include a mirror of it,
# into this ev3devcmd package until a newer version of it requiring 'paramiko==2.6.0' would be available.
# This HACK solves the dependency problem, because we then don't need the requirement for 'sftpclone=1.2.2' anymore.
# so:  removed 'sftpclone==1.2.2' from install_requires, and added  'ev3devcmd.sftpclone' to packages
dependencies = ['ev3devlogging','paramiko==2.6.0','rpyc==4.1.2','six']
# instead of  ['ev3devlogging','paramiko==2.6.0','sftpclone==1.2.2','rpyc==4.1.2','six']
# NOTE: paramiko requires 'six' installed, but it is not in its dependencies, so
#       added it myself

[project.scripts]
ev3dev = "ev3devcmd.__main__:main"

[project.urls]
Homepage = "https://github.com/ev3dev-python-tools/ev3devcmd"

[tool.setuptools.package-data]
"ev3devcmd" = ["res/*"]

[tool.setuptools.dynamic]
version = {attr = "ev3devcmd.version.__version__"}
